<resources>
    <string name="app_name">AttendenceMonitor</string>
    <string name="invalid_name">Please enter valid name</string>
    <string name="invalid_mail">Enter valid email</string>
    <string name="invalid_code">Enter minimum of three characters</string>
    <string name="invalid_password">Enter minimum of six characters</string>
    <string name="invalid_conf_password">Password does not match</string>
    <string name="must_not_be_empty">Please enter a value</string>
    <string name="onRequestPermissionsResult">Please grant the camera permission to use the QR scanner</string>

    <string name="btn_submitUser">Save</string>
    <string name="btn_cancelUser">Cancel</string>
    <string name="tv_searchUser">Search by email or names</string>
    <string name="add_module_student_value">Students selected:</string>
    <string name="menuitem_logout">Logout</string>
    <string name="login_hint_username">Enter Username</string>
    <string name="login_hint_password">Enter Password</string>
    <string name="login_submit">Login</string>

    <string name="register_submit">Register</string>
    <string name="student_type">Student</string>
    <string name="teacher_type">Teacher</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mail">Enter Mail</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="register_menu">Register</string>
    <string name="modules_menu">Modules</string>


    <string name="tv_infoQR">SHOW QR-CODE TO TEACHER</string>
    <string name="qr_code_description">QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_timeslot_name">Enter Timeslot Name</string>
    <string name="date">Date</string>
    <string name="timeslot_start_time">Start time</string>
    <string name="timeslot_end_time">End time</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="enter_module_name">Enter Module Name</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_teacher">Enter Teacher</string>
    <string name="select_students">Select students</string>
    <string name="submit">Submit</string>
    <string name="search_for_code_name_or_teacher">Search for code, name or teacher</string>
    <string name="search_for_name">Search for name</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>