<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    tools:context=".activity.auth.RegisterActivity">

    <EditText
        android:id="@+id/reg_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_firstname"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/reg_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_lastname"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/reg_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_code"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/reg_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/reg_user_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/reg_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingHorizontal="16dp"
            android:text="@string/teacher_type" />

        <RadioButton
            android:id="@+id/reg_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:paddingHorizontal="16dp"
            android:text="@string/student_type" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/round_button"
        android:text="@string/register_submit"
        android:onClick="onSubmit"
        android:textColor="@color/white" />
</LinearLayout>