<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    tools:context=".activity.auth.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:hint="@string/login_hint_username"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/primary_color"
        android:textColorHint="@color/primary_color" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/login_submit"
        android:onClick="onSubmit"
        android:textColor="@color/white" />

</LinearLayout>